--- a/package.json
+++ b/package.json
@@ -29,6 +29,13 @@
     "angular2-in-memory-web-api": "0.0.18",
     "bootstrap": "^3.3.6"
   },
+  "engines":{
+    "node":"6.5.0"
+  },
+  "respository":{
+    "type":"git",
+    "url":"https://github.com/LMabala/frontline-music"
+  },
   "devDependencies": {
     "concurrently": "^2.2.0",
     "lite-server": "^2.2.2",
